@@ -1,0 +1,34 @@
+STATEMENT_CREATE_WIKI_USER_LOGIN_INDEX = \
+    /* FIXME - this should be "lower(login)", but db2 doesn't like functions in unique keys */ \
+    CREATE UNIQUE INDEX jam_unique_wiki_user_login on jam_wiki_user (login) 
+STATEMENT_CREATE_TOPIC_TABLE = \
+    CREATE TABLE jam_topic ( \
+      topic_id INTEGER NOT NULL, \
+      virtual_wiki_id INTEGER NOT NULL, \
+      topic_name VARCHAR(200) NOT NULL, \
+      delete_date TIMESTAMP, \
+      topic_read_only INTEGER DEFAULT 0 NOT NULL, \
+      topic_admin_only INTEGER DEFAULT 0 NOT NULL, \
+      topic_content CLOB, \
+      topic_type INTEGER NOT NULL, \
+      redirect_to VARCHAR(200), \
+      CONSTRAINT jam_pk_topic PRIMARY KEY (topic_id), \
+      CONSTRAINT jam_fk_topic_vwiki FOREIGN KEY (virtual_wiki_id) REFERENCES jam_virtual_wiki(virtual_wiki_id), \
+      CONSTRAINT jam_unique_topic_name_vwiki UNIQUE (topic_name, virtual_wiki_id, delete_date) \
+    )
+STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
+    CREATE TABLE jam_topic_version ( \
+      topic_version_id INTEGER NOT NULL, \
+      topic_id INTEGER NOT NULL, \
+      edit_comment VARCHAR(200), \
+      version_content CLOB, \
+      wiki_user_id INTEGER, \
+      wiki_user_ip_address VARCHAR(15) NOT NULL, \
+      edit_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL, \
+      edit_type INTEGER NOT NULL, \
+      previous_topic_version_id INTEGER, \
+      CONSTRAINT jam_pk_topic_ver PRIMARY KEY (topic_version_id), \
+      CONSTRAINT jam_fk_topic_ver_topic FOREIGN KEY (topic_id) REFERENCES jam_topic(topic_id), \
+      CONSTRAINT jam_fk_topic_ver_wiki_user FOREIGN KEY (wiki_user_id) REFERENCES jam_wiki_user(wiki_user_id), \
+      CONSTRAINT jam_fk_topic_ver_prv_topic_ver FOREIGN KEY (previous_topic_version_id) REFERENCES jam_topic_version(topic_version_id) \
+    )
